--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           // waiter.hide(front);
           // waiter.removeFrom(front);
           S.update();
-          my_main();
+          my_main(); //TODO: reaload nach new genaration läuft noch nicht...
         }
 
         new Button(385, 60, "generate new topic")
