--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         // front content here:
         let themen_name_label = new Label({
-          text: "Loaded: ", //TODO: das label platzieren...
+          text: "",
           color: "#4B0082",
         }).pos(430, 103, null, null, front);
 
@@ -99,7 +99,7 @@
           height: 28,
           size: 28,
           min: 1,
-          max: 99,
+          max: 3,
           color: "#9A3C99",
         }).pos(230, 164, null, null, front);
 
