--- a/index.html
+++ b/index.html
@@ -476,7 +476,11 @@
         });
       }
     </script>
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <!-- <meta name="viewport" content="width=device-width, user-scalable=no" /> -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
   </head>
   <body></body>
 </html>
