--- a/index.html
+++ b/index.html
@@ -477,10 +477,7 @@
       }
     </script>
     <!-- <meta name="viewport" content="width=device-width, user-scalable=no" /> -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body></body>
 </html>
