--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       const my_font = "Roboto";
 
       new Frame(
-        FILL,
+        FIT,
         1800,
         1200,
         darker,
@@ -477,7 +477,10 @@
       }
     </script>
     <!-- <meta name="viewport" content="width=device-width, user-scalable=no" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
   </head>
   <body></body>
 </html>
