input labes shiftV

--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
           width: 385,
           height: 60,
           placeholder: "...type here...",
-          size: 36,
-          align: "left",
+          // size: 36,
+          // align: "left",
+          shiftV: 7,
+          corner: 10,
         }).pos(110, 170, RIGHT, null, front);
 
         // const waiter = new Waiter(front);
